# MariaDB_server

./: .gitignore  appveyor.yml  configure.cmake
client/: mysqldump.cc  mysqltest.cc
cmake/: cpack_rpm.cmake
extra/mariabackup/: xtrabackup.cc
extra/wolfssl/: CMakeLists.txt  user_settings.h.in
include/: my_bitmap.h  my_pthread.h  my_sys.h
mysql-test/: mariadb-test-run.pl
mysql-test/include/: connect2.inc  delete_use_source_cases.inc  delete_use_source_cases_memory.inc
mysql-test/main/: aaa1.test  alter_table.result  alter_table.test  alter_table_online.test  alter_user.result  alter_user.test  analyze_stmt_privileges.result  analyze_stmt_privileges.test  auth_named_pipe.result  auth_named_pipe.test  backup_priv.result  backup_priv.test  bug58669.result  bug58669.test  connect.result  connect.test  create.result  create_drop_role.result  create_drop_role.test  create_or_replace.result  create_or_replace_permission.result  create_or_replace_permission.test  cte_nonrecursive_not_embedded.result  cte_nonrecursive_not_embedded.test  ctype_big5.test  ctype_binary.test  ctype_cp1250_ch.result  ctype_gbk.result  ctype_latin1.result  ctype_latin2_ch.result  ctype_tis620.result  ctype_uca.result  ctype_ucs.result  ctype_ucs.test  ctype_utf8.result  debug_sync.result  debug_sync.test  default.result  delete_innodb.result  delete_innodb.test  (+197 more)
mysql-test/r/: check.result  ps_ddl.result  view.result
mysql-test/suite/binlog_encryption/: binlog_row_annotate.result
mysql-test/suite/events/: events_1.test
mysql-test/suite/federated/: federated_server.result  federated_server.test  federatedx_create_handlers.test
mysql-test/suite/handler/: interface.result
mysql-test/suite/maria/: temporary.result
mysql-test/suite/roles/: admin.result  admin.test  definer.result  drop_current_user-5176.result  drop_current_user-5176.test  flush_roles-12366.result  flush_roles-12366.test  grant-5771.result  grant-5771.test  grant_empty.result  grant_empty.test  grant_role_auto_create_user.result  grant_role_auto_create_user.test  i_s_applicable_roles_is_default.result  i_s_applicable_roles_is_default.test  ip-6401.result  ip-6401.test  rebuild_role_grants.result  rebuild_role_grants.test  role_case_sensitive-10744.result  role_case_sensitive-10744.test  set_and_drop.result  set_and_drop.test  set_default_role_new_connection.result  set_default_role_new_connection.test  set_role-13655.result  set_role-13655.test  set_role-5232.result  set_role-5232.test  set_role-simple.result  set_role-simple.test  show_create_database-10463.result  show_create_database-10463.test
mysql-test/suite/sql_sequence/: alter.test  create.result  other.result
mysql-test/t/: check.test  ps_ddl.test  view.test
mysys/: CMakeLists.txt  charset.c  my_bitmap.c  my_getopt.c  my_largepage.c  my_thr_init.c  thr_alarm.c  thr_timer.c
plugin/query_response_time/: plugin.cc
plugin/simple_password_check/: simple_password_check.c
plugin/type_uuid/: item_uuidfunc.h  sql_type_uuid.h
sql/: CMakeLists.txt  field.cc  field.h  filesort.cc  gen_lex_hash.cc  handler.cc  handler.h  item.cc  item.h  item_cmpfunc.cc  item_create.cc  item_func.cc  item_func.h  item_jsonfunc.cc  item_jsonfunc.h  item_strfunc.cc  item_strfunc.h  item_subselect.cc  item_subselect.h  item_sum.cc  item_timefunc.cc  item_timefunc.h  lex.h  lex_symbol.h  log.cc  log_event.cc  log_event.h  log_event_client.cc  log_event_server.cc  mem_root_array.h  mysqld.cc  mysqld.h  opt_range.cc  opt_split.cc  parse_file.cc  parse_tree_hints.h  rpl_parallel.cc  rpl_parallel.h  rpl_rli.cc  rpl_rli.h  (+59 more)
sql/share/: errmsg-utf8.txt
storage/innobase/btr/: btr0bulk.cc  btr0cur.cc  (+2 more)
storage/maria/: ha_maria.cc  ma_blockrec.c  ma_check.c  ma_open.c
storage/perfschema/: pfs_engine_table.cc  pfs_engine_table.h  pfs_server.cc
storage/spider/: ha_spider.cc  ha_spider.h  spd_conn.cc  spd_copy_tables.cc  spd_db_conn.cc  spd_db_mysql.cc  spd_direct_sql.cc  spd_ping_table.cc  spd_table.cc  spd_trx.cc
strings/: json_lib.c
support-files/: CMakeLists.txt
tests/: mysql_client_test.c
tpool/: aio_liburing.cc  aio_linux.cc  aio_simulated.cc  aio_win.cc  task_group.cc  tpool.h
(+277 files in other folders)
